# technopark_c-cpp_homework2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  run_valgrind.sh
data/: file
generated_data/: 1  10  11  12  13  14  2  3  4  5  6  7  8  9
generator/: diff.py  main.py  timer.py
project/: main.c
project/consistent/src/: calculations.c  control_units.c  directory_processing.c  files_processing.c  misc.c
project/include/: calculations.h  control_units.h  directory_processing.h  files.h  files_processing.h  misc.h  processing.h  words_storage.h
project/parallel/src/: calculations.c  control_units.c  directory_processing.c  files_processing.c  misc.c
project/src/: calculations.c  control_units.c  directory_processing.c  files.c  files_processing.c  misc.c  processing.c  words_storage.c
python_scripts/: diff.py  generator.py  timer.py
stress_tests/: diff.py  run_stress_tests.sh  timer.py
test/: words_storage.cpp
tests/consistent/: bag_creating_cons.cpp  calculations_cons.cpp  control_units_cons.cpp  create_hash_cons.cpp  dir_proc.cpp  dir_processing_cons.cpp  file_processing_cons.cpp  misc_cons.cpp
tests/data/data1/: 1  2  3  4  5  6
tests/data/data2/: 56  57  58  59  60  file  move_constructor
tests/data/data3/: compile_time  rule_of_third
tests/parallel/: calculations_par.cpp  control_units_par.cpp
